--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               </div>
               <div class="mt-3">
                 <label for="input-email" class="form-label">E-mail</label>
-                <input type="email" class="form-control" id="input-email">
+                <input type="email" class="form-control" id="input-email" placeholder="nome@example.com" required>
               </div>
               <div class="mt-3">
                 <label for="tipo-lavoro" class="form-label">Tipo di lavoro</label>
@@ -88,11 +88,11 @@
           <!--Submit & Prezzo finale Responsive-->
           <div class="mt-5 mb-3 col-12 d-flex flex-column justify-content-center align-items-center flex-lg-row justify-content-lg-around">
             <div class="d-flex justify-content-center align-items-center mb-2">
-              <button type="button" class="btn btn-primary">Calcola Preventivo</button>
+              <button type="button" class="btn btn-primary calcolo-preventivo">Calcola Preventivo</button>
             </div>
             <div class="d-flex justify-content-center align-items-center flex-column">
               <h5><strong>Prezzo Finale</strong></h5>
-              <p class="fs-3"><strong>€ 0</strong>,00</p>
+              <p class="fs-3"><strong>€</strong></p>
             </div>
           </div>
         </div>
