--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
-      <div class="container-md">
+      <div class="container">
         <a class="navbar-brand text-light" href="#">Bool Factory</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
           aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
