Feat: aggiunto il prevent per il impedire il funzionamento del tasto

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
           <form>
             <div>
               <div class="mt-3">
-                <label for="nome" class="form-label">Nome</label>
+                <label for="input-nome" class="form-label">Nome</label>
                 <input type="text" class="form-control" id="input-nome">
               </div>
               <div class="mt-3">
-                <label for="cognome" class="form-label">Cognome</label>
+                <label for="input-cognome" class="form-label">Cognome</label>
                 <input type="text" class="form-control" id="input-cognome">
               </div>
               <div class="mt-3">
@@ -64,9 +64,9 @@
                 <label for="tipo-lavoro" class="form-label">Tipo di lavoro</label>
                 <select id="tipo-lavoro" class="form-select">
                   <option>Seleziona tipo di lavoro</option>
-                  <option value="20,50">Back-end Development</option>
-                  <option value="15,30">Frontend Development</option>
-                  <option value="33,60">Project Analysis</option>
+                  <option value="20.50">Back-end Development</option>
+                  <option value="15.30">Frontend Development</option>
+                  <option value="33.60">Project Analysis</option>
                 </select>
               </div>
               <div class="mt-3 ">
@@ -78,7 +78,7 @@
                 <input type="text" class="form-control" id="codice-promo">
               </div>
               <div class="form-check mt-3">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" required>
                 <label class="form-check-label" for="flexCheckDefault">
                   Accetto la privacy policy
                 </label>
